fix overflow

--- a/src/css/Personal2.css
+++ b/src/css/Personal2.css
@@ -4,6 +4,8 @@
     background-size: cover;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+    position: relative;
   }
 
 
